Updated CSS for full-width layout and adjusted Last searched styling

--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "dependencies": {
     "@capacitor/android": "6.1.2",
     "@capacitor/app": "6.0.1",
-    "@capacitor/cli": "6.1.2",
-    "@capacitor/core": "6.1.2",
+    "@capacitor/cli": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/ios": "6.1.2",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
-    "@testing-library/jest-dom": "6.4.8",
-    "@testing-library/react": "16.0.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "14.5.2",
+    "cordova": "^6.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "web-vitals": "3.5.2"
